feat: emit Flight Recorder events for slow runs by default, and for every run and rule on request (#418)
Co-authored-by: Claude Fable 5.1 <noreply@anthropic.com>